@startuml

title __FIFTEENTH's Class Diagram__\n

  namespace cn.shui.learning_plan.offer.fifteenth {
    class cn.shui.learning_plan.offer.fifteenth.Offer34 {
        - ans : List<List<Integer>>
        - list : List<Integer>
        {static} + main()
        + pathSum()
        - dfs()
    }
  }
  

  namespace cn.shui.learning_plan.offer.fifteenth {
    class cn.shui.learning_plan.offer.fifteenth.Offer36 {
        + treeToDoublyList()
        - dfs()
    }
  }
  

  namespace cn.shui.learning_plan.offer.fifteenth {
    class cn.shui.learning_plan.offer.fifteenth.Offer54 {
        - k : int
        + kthLargest()
        - dfs()
    }
  }
  

  cn.shui.learning_plan.offer.fifteenth.Offer36 o-- cn.shui.learning_plan.offer.model.Node2 : head
  cn.shui.learning_plan.offer.fifteenth.Offer36 o-- cn.shui.learning_plan.offer.model.Node2 : pre


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
